--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.6",
     "@reduxjs/toolkit": "^1.9.3",
     "expo": "~48.0.4",
     "expo-status-bar": "~1.4.4",
